--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "antd": "^5.2.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "lodash": "^4.17.21",
